// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pi;

// The greeting service definition.
service PiCounter {
  // Sends a greeting
  rpc CountPiDigits (CountRequest) returns (CountResponse) {}
  rpc Test (TestReceive) returns (TestSend) {}
}

message TestSend {
	string message = 1;
}

message TestReceive {
	string message = 1;
}

message CountRequest {
	int64 skip = 1;
}

message CountResponse {
	repeated int64 count = 1; 
}
